--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       </div>
       <section class="main-footer__map">
         <h2 class="visually-hidden">Контакты</h2>
-        <img src="img/map.jpg" width="1250px" height="430px" alt="Адрес офлайн магазина: город Санкт-Петербург, улица Большая Конюшенная 19/8">
+        <img src="img/map.jpg" width="1250" height="430" alt="Адрес офлайн магазина: город Санкт-Петербург, улица Большая Конюшенная 19/8">
       </section>
       <section class="main-footer__contacts contacts visually-hidden">
         <h3>Адрес главного офиса и офлайн-магазина:</h3>
@@ -226,8 +226,8 @@
         </li>
       </ul>
       <ul class="main-footer__additional additional-info">
-        <li class="additional-info__item additional-info__item--active">
-          <a class="icon-before additional-info__link additional-info__link--heart" href="#">Для поставщиков</a>
+        <li class="additional-info__item additional-info__item--heart">
+          <a class="additional-info__link" href="#">Для поставщиков</a>
         </li>
         <li class="additional-info__item">
           <a class="additional-info__link"  href="#">О производстве</a>
@@ -239,7 +239,12 @@
           <a class="additional-info__link"  href="#">Экологические стандарты</a>
         </li>
       </ul>
-      <a class="icon-before main-footer__copyright copyright"  href="https://htmlacademy.ru/intensive/htmlcss">Сделано в <span>HTML Academy</span>  &#169; 2019</a>
+      <div class="main-footer__copyright copyright">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
+        </a>
+        <p class="copyright__text">Сделано в <a class="copyright__link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &#169; 2019</p>
+      </div>
     </footer>
     <section class="feedback">
       <h2>Мы обязательно вам ответим!</h2>
