Вафля, Акции, Доп.инфо (Статья и Подписка), Карта + обратная связь сверстаны.

--- a/index.html
+++ b/index.html
@@ -130,84 +130,81 @@
             <p class="bestsellers__price price">
               <span class="price__amount">310 ₽</span>
               <span class="price__weight">/кг</span>
-              <a class="price__link" href="#"><img src="img/product-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
             </p>
-            <h3><a href="#">Сливочное с апельсиновым<br> джемом и цитрусовой стружкой</a></h3>
+            <a class="price__link" href="#"><img src="img/product-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
+            <h3><a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
           </li>
           <li class="bestsellers__item">
             <p class="bestsellers__price price">
               <span class="price__amount">380 ₽</span>
               <span class="price__weight">/кг</span>
-              <a class="price__link" href="#"><img src="img/product-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"></a>
             </p>
-            <h3><a href="#">Сливочно-кофейное с кусочками<br> шоколада</a></h3>
+            <a class="price__link" href="#"><img src="img/product-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"></a>
+            <h3><a href="#">Сливочно-кофейное с кусочками шоколада</a></h3>
           </li>
           <li class="bestsellers__item">
             <p class="bestsellers__price price">
               <span class="price__amount">355 ₽</span>
               <span class="price__weight">/кг</span>
-              <a class="price__link" href="#"><img src="img/product-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада"></a>
             </p>
-            <h3><a href="#">Сливочно-клубничное с<br> присыпкой из белого шоколада</a></h3>
+            <a class="price__link" href="#"><img src="img/product-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада"></a>
+            <h3><a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
           </li>
           <li class="bestsellers__item">
             <p class="bestsellers__price price">
               <span class="price__amount">415 ₽</span>
               <span class="price__weight">/кг</span>
-              <a class="price__link" href="#"><img src="img/product-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"></a>
             </p>
-            <h3><a href="#">Сливочное крем-брюле с<br> карамельной подливкой</a></h3>
+            <a class="price__link" href="#"><img src="img/product-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"></a>
+            <h3><a href="#">Сливочное крем-брюле с карамельной подливкой</a></h3>
           </li>
         </ul>
       </section>
 
       <section class="container page-main__features features">
         <h2 class="visually-hidden">Преимущества</h2>
-        <div class="features__container">
-          <h3 class="features__lead">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
-          <ul class="features__list">
-            <li class="icon-before features__item features__item--ice-cream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
-            </li>
-            <li class="icon-before features__item features__item--eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
-            </li>
-            <li class="icon-before features__item features__item--cow">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
-            </li>
-            <li class="icon-before features__item features__item--thermometer">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
-            </li>
-          </ul>
-        </div>
-      </section>
-      <div class="container">
-        <ul class="container__list">
-          <li class="page-main__blog blog">
-            <h2>Новое в нашем блоге</h2>
-            <a class="blog-topic" href="#">10 способов сервировки фруктовых щербетов к столу</a>
+        <h3 class="features__lead">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+        <ul class="features__list">
+          <li class="icon-before features__item features__item--ice-cream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
           </li>
-
-          <li class="page-main__subscription subscription">
-            <h2 class="visually-hidden">Подписка</h2>
-            <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-            <form class="subscription__form" action="https://echo.htmlacademy.ru" method="post">
-              <p>
-                <label class="visually-hidden" for="subscription-email">Электронная почта</label>
-                <input class="subscription__input" id="subscription-email" type="text" name="email" placeholder="Электронная почта">
-              </p>
-              <button class="subscription__submit-button button" type="submit">Отправить</button>
-            </form>
+          <li class="icon-before features__item features__item--cow">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
+          </li>
+          <li class="icon-before features__item features__item--eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
+          </li>
+          <li class="icon-before features__item features__item--thermometer">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
           </li>
         </ul>
-      </div>
-      <section class="main-footer__map">
-        <h2 class="visually-hidden">Контакты</h2>
-        <img src="img/map.jpg" width="1250" height="430" alt="Адрес офлайн магазина: город Санкт-Петербург, улица Большая Конюшенная 19/8">
       </section>
-      <section class="main-footer__contacts contacts visually-hidden">
-        <h3>Адрес главного офиса и офлайн-магазина:</h3>
-        <p class="contacts__adress">ул. Б. Конюшенная, д. 19/8, Санкт-Петербург</p>
-        <p>Для заказов по телефону:</p>
-        <a class="contacts__telephone-number" href="tel:+78122757575">8 812 450-25-25</a>
-        <p>(с 10 до 20 ежедневно)</p>
-        <a class="contacts__button button" href="#">Форма обратной связи</a>
+      <div class="container add-columns">
+        <article class="page-main__blog blog">
+          <h2>Новое в нашем блоге</h2>
+          <a class="blog-topic" href="#">10 способов сервировки фруктовых щербетов к столу</a>
+        </article >
+
+        <section class="page-main__subscription subscription">
+          <h2 class="visually-hidden">Подписка</h2>
+          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+          <form class="subscription__form" action="https://echo.htmlacademy.ru" method="post">
+            <label class="visually-hidden" for="subscription-email">Электронная почта</label>
+            <input class="subscription__input" id="subscription-email" type="text" name="email" placeholder="Электронная почта">
+            <button class="subscription__submit-button button" type="submit">Отправить</button>
+          </form>
+        </section>
+      </div>
+      <section class="page-main__contacts contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <img class="map-img" src="img/map.jpg" width="1250" height="430" alt="Адрес офлайн магазина: город Санкт-Петербург, улица Большая Конюшенная 19/8">
+        <div class="map-yandex">
+          <iframe class="map-yandex" src="https://yandex.ru/map-widget/v1/-/CBRWz6CBxC"></iframe>
+        </div>
+        <div class="contacts__window">
+          <h3>Адрес главного офиса и офлайн-магазина:</h3>
+          <p class="contacts__adress">ул. Б. Конюшенная<br> д. 19/8, Санкт-Петербург</p>
+          <p>Для заказов по телефону:</p>
+          <a class="contacts__telephone-number" href="tel:+78122757575">8 812 450-25-25</a>
+          <p class="contacts__work-hours">(с 10 до 20 ежедневно)</p>
+          <a class="contacts__button button" href="#">Форма обратной связи</a>
+        </div>
       </section>
     </main>
     <footer class="main-footer">
